# openFAMC

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  FAMC.sln  LICENSE.txt  README.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
BaseFAMC/: AffineMotionPredictor.cpp  AffineMotionPredictor.h  AffineTransform.cpp  AffineTransform.h  BaseFAMC.vcxproj  BaseFAMC.vcxproj.filters  CMakeLists.txt  Console.cpp  Console.h  FileIO.cpp  IndexedFaceSet.cpp  MathTools.h  fileio.h  hierarchicalpartitionner.cpp  nr.h  nrtypes_lib.h  nrutil_tnt.h  nrutil_val.h  svdcmp.cpp
Commun/: DCTEncoder.cpp  DCTEncoder.h  FAMCCommon.h  FAMCParams.cpp  LiftCodec.cpp  ResidualCoder.cpp  ScalableResidualsDecoder.cpp  ScalableResidualsEncoder.cpp  ScalableResidualsEncoder.h  cabac.h
FAMCCodec/: CMakeLists.txt  FAMCCodec.vcxproj  FAMCCodec.vcxproj.filters  cmake_install.cmake  famc.cpp
FAMCDecoder/: CMakeLists.txt  FAMCDecoder.cpp  FAMCDecoder.h  FAMCDecoder.vcxproj  FAMCDecoder.vcxproj.filters  famc.cpp
FAMCEncoder/: FAMCEncoder.vcxproj  FAMCEncoder.vcxproj.filters  cmake_install.cmake
ctm-tools/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTM-TOOLS.sln  CTM-TOOLS.vcxproj  CTM-TOOLS.vcxproj.filters  convoptions.cpp  convoptions.h  ctm.cpp  ctmbench.cpp  ctmconv.cpp  famc.h  log.txt  meshio.cpp  outFamc_partition.txt  phong_frag.h
ctm-tools/glew/: GLEW.vcxproj  GLEW.vcxproj.filters  cmake_install.cmake
ctm-tools/pnglite/: pnglite.vcxproj  pnglite.vcxproj.filters
ctm-tools/rply/: CMakeLists.txt  rply.c  rply.vcxproj  rply.vcxproj.filters
ctm-tools/tinyxml/: TINYXML.vcxproj  TINYXML.vcxproj.filters
ctm-tools/zlib/: CMakeLists.txt  ZLIB.vcxproj  ZLIB.vcxproj.filters
ld3dmc/: CMakeLists.txt  DPCMDec.h  DPCMPred.h  DPCMPredDelta.h  DynamicMesh.h  DynamicMeshBase.cpp  DynamicMeshBase.h  FAMCCabacVx3Encoder.cpp  FAMCSimplificationModeDecoder.cpp  FAMCSimplificationModeDecoder.h  FAMCSimplificationModeEncoder.cpp  FAMCVertexInfoDecoder.cc  FAMCVertexInfoDecoder.h  FAMCVertexInfoEncoder.h  LDFrameOrderFactory.cpp  LDFrameOrderFactory.h  LDFrameTypeData.h  LDQuant1D.h  LDQuant3D.h  LDReader.h  LDRecon1D.h  LDRecon3D.h  LDSegmentDecomposer.h  LDSegmentReconstructor.h  LDWriter.cpp  LayeredDecomposerAutomatic.cc  LayeredDecomposerAutomatic.h  LayeredDecomposerUserBased.h  LayeredDecomposition.h  LayeredSimplificationOperationsFactory.h  MyPredI.h  PointT.h  PointUtils.cpp  PointUtils.h  SConnectivity.cc  SimplificationDecomposer.cc  SimplificationOperationsFactory.cc  Stat.cpp  Stat.h  TraversalDecomposer.h  (+4 more)
o3dg/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  o3dgc.sln
o3dg/o3dgc_common_lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  O3DGC_COMMON_LIB.sln  o3dgc_common_lib.vcxproj  o3dgc_common_lib.vcxproj.filters
o3dg/o3dgc_decode_lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  O3DGC_DEC_LIB.sln  o3dgc_dec_lib.vcxproj  o3dgc_dec_lib.vcxproj.filters
o3dg/o3dgc_encode_lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  O3DGC_ENC_LIB.sln  o3dgc_enc_lib.vcxproj  o3dgc_enc_lib.vcxproj.filters
o3dg/test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  O3DGC_TEST.sln  handstand_meshFF.wrl  test_o3dgc.vcxproj  test_o3dgc.vcxproj.filters
openctmlib/: openctm.h  openctmlib.vcxproj  openctmlib.vcxproj.filters
test_data/dance_mesh/: output0010.off  output0016.off  output0022.off  output0028.off  output0031.off
test_data/dog_mesh/: output0019.off  output0031.off
test_data/handstand_mesh/: output0004.off  output0010.off  output0025.off  output0028.off  output0031.off
trunk/: CMakeCache.txt  CMakeLists.txt  README.txt  cmake_install.cmake
trunk/BaseFAMC/: Animation.cpp  Animation.h  IndexedFaceSet.h  LiftScheme.cpp  LiftScheme.h  MathTools.cpp  MotionModel.cpp  MotionModel.h  ReadMe.txt  cmake_install.cmake  hierarchicalPartitionner.h  nrtypes_nr.h  nrutil_mtl.h  nrutil_nr.h  print_array.h
trunk/Commun/: ContextModels.h  FAMCParams.h  LiftCodec.h  ResidualCoder.h  ScalableResidualsDecoder.h  cabac.cpp
trunk/FAMCDecoder/: FAMCDecoder.cpp
trunk/FAMCEncoder/: CMakeLists.txt  FAMCEncoder.cpp  FAMCEncoder.h  famc.cpp
trunk/ctm-tools/: cmake_install.cmake  famc.cpp  mesh.cpp  phong_vert.h  ply.cpp
trunk/ctm-tools/glew/: CMakeLists.txt
trunk/ctm-tools/pnglite/: CMakeLists.txt  cmake_install.cmake
trunk/ctm-tools/rply/: cmake_install.cmake
trunk/ctm-tools/tinyxml/: CMakeLists.txt  cmake_install.cmake
trunk/ctm-tools/zlib/: cmake_install.cmake
trunk/ld3dmc/: DPCMEnc.h  DPCMPredLin.h  DPCMPredNonLin.h  DynamicMesh.cpp  FAMCCabacVx3Decoder.cpp  FAMCCabacVx3Decoder.h  FAMCCabacVx3Encoder.h  FAMCLayeredDecompositionDecoder.h  FAMCSimplificationModeEncoder.h  FAMCVertexInfoEncoder.cpp  LD3DMCParam.h  LDReader.cpp  LDSegmentDecoder.cpp  LDSegmentDecoder.h  LDSegmentDecomposer.cpp  LDSegmentEncoder.cpp  LDSegmentEncoder.h  LDSegmentReconstructor.cpp  LDWriter.h  LayeredDecomposerUserBased.cc  MeshTypes.h  MyPredI.cpp  MySimplePreds.h  PatchDecomposer.h  PredI.h  ReadMe.txt  SConnectivity.h  SimplificationDecomposer.h  SimplificationOperationsFactory.h  TraversalDecomposer.cc  Vertex.h  cmake_install.cmake
trunk/openctmlib/: CMakeLists.txt  cmake_install.cmake
trunk/test_data/: eagle.wrl  famcParamFile.txt  test_data.txt
trunk/test_data/dance_mesh/: output0001.off  output0004.off  output0007.off  output0013.off  output0019.off  output0025.off
trunk/test_data/dog_mesh/: output0001.off  output0004.off  output0007.off  output0010.off  output0013.off  output0016.off  output0022.off  output0025.off  output0028.off
trunk/test_data/handstand_mesh/: output0001.off  output0007.off  output0013.off  output0016.off  output0019.off  output0022.off
